--- a/index.html
+++ b/index.html
@@ -1,281 +1,105 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-
-    <title>
-    Айкидо Ивама Син Син Айки Сюренкай
-    </title>
-
-
-    <meta charset="USF-8">
-    <link rel="stylesheet" href="aikizyq.css" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
-
-</head>
- <body>
-    <!---начало кода странички "Новости"--->
-
-    <!---Просто главная верхняя линия-->
-       <hr size="1" color=red>
-    <center>
-	<!---Главная таблица--->
-	    <table border="0" width=100%>
-            <tr>
-			<!---Область информации--->
-		         <td width=85%>
-		           <table border="0" width=100%>
-				   <!--<tr>
-                   <td align="right" colspan="3">
-                   <br><span class="header"><a href="index.html"></a></span>
-                   </td>
-                    </tr>-->
-
-				   <tr>
-				   <h1>Айкидо</h1>
-
-				   <h2>Ивама Син Син Айки Сюренкай</h2>
-
-				   </tr>
-				   <!---Просто внутренняя линия--->
-				   <tr>
-				      <td>
-				      </td>
-				      <td align="right" colspan="2">
-				      <hr align="right" size="1" color=red>
-				      </td>
-				   </tr>
-				   <!--Просто внутренняя линия-->
-				   <tr>
-				    <td align="right" valign="top">
-                     <span class="sdate">17.09.2018<span class="space">.</span>г.</span>
-                    </td>
-					<td align="lift">
-					  <span class="space"></span>
-					</td>
-
-                    <td align="left">
-                      <span class="normal_blue">
-					  <!---сделать якорь #news_children--->
-					  <br>Продолжается набор во взрослую и <a href="img/Дети_7434-1.jpg">детскую</a> группы айкидо:</span>
-					  <br>
-					  <br>взрослые от 16 лет
-					  <br>дети от 6 лет
-					  <br><span class="sel">Адрес:</span>
-					  <br>ул.Гражданский проспект 13-15 Бертгольд центр
-					  <br>пройти в арку, 4 - этаж, студия перформативных искусств "Сдвиг"
-				      <br>(здание из красного кирпича, первая дверь от угла с левой стороны, на жёлтой табличке указаны этажы)
-                      <br>
-					  <br>
-                    </td>
-				   </tr>
-				   <!---Просто внутренняя линия--->
-				   <tr>
-				     <td>
-				     </td>
-				     <td align="right" colspan="2">
-				     <hr align="right" size="1" color=red>
-				     </td>
-
-				   </tr>
-				   <!--Просто внутренняя линия-->
-				   <!---<tr>
-				        <td align="right" valign="top">
-				        <span class="sdate"><span></span></span>
-				        </td>
-				        <td align="left">
-						 <span class="space"></span>
-						</td>
-				   <td align="left">--->
-				   <!---сделать якорь #news_children--->
-				  <!---<br>
-				   <br>
-				   <br>
-				   <br>
-				   <br><span class="sel"></span>
-				   <br>
-				   <br>
-				   <br>
-                   <br>
-				   <br>
-				   <br>
-				   </td>
-				   </tr>
-
-				   <!---Просто внутреняя линия--->
-				 <!---<tr>
-				    <td>
-					</td>
-				    <td align="right" colspan="2">
-				    <hr align="right" size="1" color="red">
-				    </td>
-				 </tr>--->
-				 <!---Просто внутреняя линия--->
-
-				 <tr>
-				    <td align="right" valign="top">
-					<span class="sdata"></span>
-				    </td>
-					<td align="laft">
-					<span class="space">.......</span>
-					</td>
-
-
-					 <td align="left">
-					  <span class="normal_blue">
-					  <br>Расписание взрослых и детских тренировок:</span>
-					  <span class="normal"></span>
-					  <br>
-					  <br>Запись по телефону 8 (931) 30 - 82 - 5 - 82
-					  <br>Инструктор: Валерий
-
-		<table class="normal" border=1 bordercolor=white cellspacing=2>
-		      <tr>
-			    <td colspan=8>
-				<hr align="right" size="1" color=red>
-			    </td>
-			  </tr>
-			    <tr valign=bottom>
-			      <td bgcolor=white class="normal_blue">Время
-				  </td>
-				  <td bgcolor=white class="normal_blue"><font color=red>|</font>пн
-				  </td>
-				  <td bgcolor=white><font color=red>|</font>вт
-				  </td>
-				  <td bgcolor=white class="normal_blue"><font color=red>|</font>ср
-				  </td>
-				  <td bgcolor=white><font color=red>|</font>чт
-				  </td>
-				  <td bgcolor=white class="normal_blue"><font color=red>|</font>пт
-				  </td>
-				  <td bgcolor=white><font color=red>|</font>сб
-				  </td>
-				  <td bgcolor=white><font color=red>|</font>вс
-				  </td>
-			    </tr>
-			<tr>
-			 <td colspan=8>
-				<hr align="right" size="1" color=red>
-			  </td>
-			</tr>
-				    <tr>
-					  <td bgcolor=white class="normal_blue" valign=left>
-				         09:30 - 11:00
-					 <br>16:00 - 17:30
-					  </td>
-
-					  <td bgcolor=white>
-				<font color=red>|</font> Взрослые от 16 лет
-				<br>
-				<font color=red>|</font> Дети от 6 лет
-				      </td>
-					  <td valign=bottom>
-				<font color=red>|</font> --
-				<br>
- 				<font color=red>|</font> --
-					  </td>
-					  <td bgcolor=white>
-				<font color=red>|</font> Взрослые от 16 лет
-				<br>
- 				<font color=red>|</font> Дети от 6 лет!
-					  </td>
-					  <td valign=bottom>
-				<font color=red>|</font> --
-				<br>
- 				<font color=red>|</font> --
-					  </td>
-					  <td bgcolor=white>
-				<font color=red>|</font> Взрослые от 16 лет
-				<br>
- 				<font color=red>|</font> Дети от 6 лет
-					  </td>
-					 <td valign=bottom>
-				<font color=red>|</font> --
-				<br>
- 				<font color=red>|</font> --
-					  </td>
-					  <td valign=bottim>
-				<font color=red>|</font> --
-				<br>
- 				<font color=red>|</font> --
-					  </td>
-					</tr>
-			 <tr>
-		       <td colspan=8>
-		         <hr align="right" size="1" color=red>
-		       </td>
-		     </tr>
-        </table>
-				<br><a target=_blank title="Нажмите, чтобы перейти на Яндекс" href="https://yandex.ru/maps/?um=constructor%3A578a393bebf31d61901f76151ac5e319bafe8b64ec86dbae29dabd23f5b12ec0&source=constructorLink">
-					<img src="img/карта.png" alt="Карта прохода на занятия по Айкидо"/>
-				</a>
-
-				 </tr>
-
-				 <!---Просто внутренняя линия--->
-				 <tr>
-				     <td>
-				     </td>
-				     <td align="right" colspan="2">
-				     <hr align="right" size="1" color=red>
-				 </td>
-				 <!---Просто внутренняя линия--->
-
-				 <tr>
-				        <td align="right" valign="top">
-				        <span class="sdate"><span></span></span>
-				        </td>
-				        <td align="left">
-						 <span class="space"></span>
-						</td>
-				   <td align="left">
-				   <!---сделать якорь #news_children--->
-				   <br>Инструктор:
-				   <br>
-				   <br>Рычков Валерий Константинович
-                  <br>Стаж занятий восточными единоборствами более 24 лет.
-                  <br>Стаж преподавания восточных единоборств более 15 лет.
-                  <br>1 дан Ивама рю [Морихиро Сайто 9 дан]
-                  <br>1 дан Ивама рю бокен и джо (оружие) [Морихиро Сайто 9 дан]
-				  <br>
-				  <br><img src="img/rvk1.JPG" width="200" height="" alt="Рычков Валерий Константинович">
-				  <br>
-				  <br>
-				   </td>
-				   </tr>
-
-				   </tr>
-
-				  </table>
-
-				  <!---Область информации--->
-		         </td>
-
-				 <!---Меню--->
-
-
-				    <td width=15% valign="top">
-					 <table width=100%>
-				      <tr>
-					   <td align="right" valign="top">
-					 <a href="index.html"><img title="на титульную странцу"
-				       height="100" width="100" src="img/logo.png" align=middle alt="логотип ивама син син айки сюренкай"></img></a>
-				       </td>
-					  </tr>
-					 </table>
-					</td>
-
-
-
-				 <!---Меню--->
-
-			  </tr>
-		  </table>
-		  <!---Завершение главной таблицы--->
-	   </center>
-	  <!---Просто главная нижнняя линия-->
-      <hr size="1" color=red>
-    <!---Просто главная нижнняя линия-->
-   </body>
+  <head>
+    <title>Айкидо Ивама Син Син Айки Сюренкай</title>
+    <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="Description" content="Айкидо, Рычков Валерий Константинович">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="styles/typebase.css" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+  </head>
+  <body>
+    <header>
+		<picture>
+			<source srcset="/img/logo.webp" type="image/webp">
+			<source srcset="/img/logo.png" type="image/png"> 
+			<img src="/img/logo.png" alt="Ивама Син Син Айки Сюренкай">
+		</picture>
+		<h1>Айкидо</h1>
+		<h2>Ивама Син Син Айки Сюренкай</h2>
+    </header>
+    <main>
+      <article>
+		<header>
+			<div class="date">17.09.2018</div>		
+			<h3>Продолжается набор во взрослую и детскую группы айкидо </h3>
+		</header>  
+        <p>
+			Bзрослые от 16 лет. Дети от 6 лет. <br>
+			Адрес: <br>
+			<address>
+				ул.Гражданский проспект 13-15 Бертгольд центр <br />
+				пройти в арку, 4 - этаж, студия перформативных искусств "Сдвиг" <br />
+				(здание из красного кирпича, первая дверь от угла с левой стороны, на жёлтой табличке указаны этажы)
+			</address>
+		</p>
+      </article>
+      <article>
+        <h3>Расписание взрослых и детских тренировок</h3>
+        <div class="table-responsive">
+          <table>
+            <thead>
+              <tr>
+                <th>время</th>
+                <th>пн</th>
+                <th>вт</th>
+                <th>ср</th>
+                <th>чт</th>
+                <th>пт</th>
+                <th>сб</th>
+                <th>вс</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>09:30 - 11:00</td>
+                <td>от 16 лет</td>
+                <td>--</td>
+                <td>от 16 лет</td>
+                <td>--</td>
+                <td>от 16 лет</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>16:00 - 17:30</td>
+                <td>от 6 лет</td>
+                <td>--</td>
+                <td>от 6 лет</td>
+                <td>--</td>
+                <td>от 6 лет</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <p>
+          Запись по телефону 8 (931) 30 - 82 - 5 - 82 <br />
+          Инструктор: Валерий
+        </p>
+	  </article>
+	  <article>
+		  <h3>Инструктор</h3>
+		  <p>
+			Рычков Валерий Константинович <br>
+			Стаж занятий восточными единоборствами более 24 лет. <br>
+			Стаж преподавания восточных единоборств более 15 лет. <br>
+			1 дан Ивама рю [Морихиро Сайто 9 дан] <br>
+			1 дан Ивама рю бокен и джо (оружие) [Морихиро Сайто 9 дан] <br>
+		  </p>
+	  </article>
+	  <article>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.2352142349737!2d30.30977771609662!3d59.9282390818724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46963102f78151c5%3A0x312682b5bafc96fe!2z0KHQlNCS0JjQkw!5e0!3m2!1sru!2sru!4v1544204947449" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+	  </article>
+    </main>
+    <!-- <h1 id="header-level-1">Заголовок уровня 1</h1>
+    <h2 id="header-level-2">Заголовок уровня 2</h2>
+    <h3 id="header-level-3">Заголовок уровня 3</h3>
+    <h4 id="header-level-4">Заголовок уровня 4</h4>
+    <h5 id="header-level-5">Заголовок уровня 5</h5>
+    <h6 id="header-level-6">Заголовок уровня 6</h6> -->
+  </body>
 </html>
